[package]
name = "nuts-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
prost = "0.8.0"
anyhow = "1.0.44"
futures = "0.3.17"
clap = "3.0.0-beta.4"
async-stream = "0.3.2"
pretty_env_logger = "0.4.0"
uuid = { version = "0.8.2", features = ["v4"] }
tonic = { version = "0.5.2", features = ["tls"] }
tokio = { version = "1.12.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }

[build-dependencies]
tonic-build = "0.5.2"
